--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,8 +15,9 @@
      limitations under the License.
 -->
 <resources>
-    <dimen name="padding_small">8dp</dimen>
-    <dimen name="padding_medium">16dp</dimen>
+    <dimen name="padding_small">5dp</dimen>
+    <dimen name="padding_medium">10dp</dimen>
+    <dimen name="padding_big">15dp</dimen>
     <dimen name="thickness_divider1">1dp</dimen>
     <dimen name="thickness_divider3">3dp</dimen>
 </resources>
